fixtures/errors/too_many_argument.s
.name "aaa"
.comment "bbb"

live %234, %10, %1
